# RemoveEmptyDirs

./: Main.hs  README.md  RemoveEmptyDirs.cabal  RemoveEmptyDirs.hs  RemoveEmptyDirsTest.hs  Setup.hs  remove-empty-dirs.cabal
