-- Written in 2014 by Philipp Stephani <p.stephani2@gmail.com>.
--
-- To the extent possible under law, the author has dedicated all copyright and
-- related and neighboring rights to this software to the public domain worldwide.
-- This software is distributed without any warranty.
--
-- You should have received a copy of the CC0 Public Domain Dedication along with
-- this software.  If not, see http://creativecommons.org/publicdomain/zero/1.0/.

name:                RemoveEmptyDirs
version:             0.1.0.0
synopsis:            Removes empty directories
license:             PublicDomain
license-file:        LICENSE
author:              Philipp Stephani
maintainer:          p.stephani2@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable RemoveEmptyDirs
  main-is:             RemoveEmptyDirs.hs
  build-depends:       base ==4.6.*, directory ==1.2.*, filepath ==1.3.*, hslogger ==1.2.*
  ghc-options:         -Wall -Werror
