-- Written in 2014 by Philipp Stephani <p.stephani2@gmail.com>.
--
-- To the extent possible under law, the author has dedicated all copyright and
-- related and neighboring rights to this software to the public domain worldwide.
-- This software is distributed without any warranty.
--
-- You should have received a copy of the CC0 Public Domain Dedication along with
-- this software.  If not, see http://creativecommons.org/publicdomain/zero/1.0/.

name:                RemoveEmptyDirs
version:             0.1.0.0
synopsis:            Removes empty directories
license:             PublicDomain
license-file:        LICENSE
author:              Philipp Stephani
maintainer:          p.stephani2@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options:       -Wall -Werror
  exposed-modules:   RemoveEmptyDirs
  build-depends:
    base ==4.6.*,
    directory ==1.2.*,
    filepath ==1.3.*,
    hslogger ==1.2.*

executable RemoveEmptyDirs
  main-is:           Main.hs
  ghc-options:       -Wall -Werror
  build-depends:
    base ==4.6.*,
    directory ==1.2.*,
    filepath ==1.3.*,
    hslogger ==1.2.*

test-suite tests
  main-is:           RemoveEmptyDirsTest.hs
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall -Werror
  build-depends:
    base ==4.6.*,
    directory ==1.2.*,
    filepath ==1.3.*,
    hslogger ==1.2.*,
    HUnit ==1.2.*,
    mtl ==2.1.*,
    test-framework ==0.8.*,
    test-framework-hunit ==0.3.*,
    unix ==2.6.*,
    Unixutils ==1.52.*
