-- Copyright 2014 Google LLC
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     https://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

name:                remove-empty-dirs
version:             0.1.0.0
synopsis:            Removes empty directories
license:             Apache-2.0
license-file:        LICENSE
author:              Philipp Stephani
maintainer:          p.stephani2@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable rmedirs
  main-is:           Main.hs
  other-modules:
    RemoveEmptyDirs
    Paths_remove_empty_dirs
  ghc-options:       -Wall -Werror
  build-depends:
    base ==4.11.*,
    directory ==1.3.*,
    filepath ==1.4.*,
    hslogger ==1.2.*,
    MissingH ==1.4.*

test-suite tests
  main-is:           RemoveEmptyDirsTest.hs
  other-modules:
    RemoveEmptyDirs
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall -Werror
  build-depends:
    base ==4.11.*,
    directory ==1.3.*,
    filepath ==1.4.*,
    hslogger ==1.2.*,
    HUnit ==1.6.*,
    mtl ==2.2.*,
    test-framework ==0.8.*,
    test-framework-hunit ==0.3.*,
    unix ==2.7.*,
    Unixutils ==1.54.*
